11-Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easycrud-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2          # Strips /api prefix before forwarding
    nginx.ingress.kubernetes.io/use-regex: "true"             # Enables regex in paths
spec:
  ingressClassName: nginx                                     # Must match NGINX controller class
  rules:
    - http:
        paths:
          # /api/* → backend-service (Spring Boot on port 8080)
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 8080

          # /* → frontend-service (React/Nginx on port 80)
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
